Revert "Robert/279 jetty 12 migration (#207)" (#246)
This reverts commit bdaa26bb2667874327e667fdb51f9c5a2d4aa797.
Branch worked locally but failed to start on staging. Reverting commit until a fix is implemented.